# microservice-playground

./: .gitignore  README.md  TODO  Vagrantfile  app.py  requirements.txt  run_uwsgi.sh  simple_perf_test.sh
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
aiohttp_app/: Dockerfile  Makefile  app.py  last_result  pyproject.toml  requirements.txt  run.sh
apistar_app/: app.py  last_result  requirements.txt  run.sh
configurator/: cf_env_config.py
falcon_app/: .cfignore  Dockerfile  Vagrantfile  app.py  benchmark_list.txt  build_for_cf.sh  manifest.yml  requirements.txt  run_gunicorn.sh  run_meinheld.sh  run_uwsgi.sh  test_app.py  tox.ini  vagrant_bootstrap.sh
falcon_app/falcon_app/: app.py
falcon_app/service_tests/: test_service.py
falcon_app/tests/: requirements.txt  test_app.py
falcon_downloader/: downloader.py
fastapi_app/: Makefile  pyproject.toml
fastapi_app/app/: app.py
go_app/: app.go  last_result  run.sh
microservice-performance/: pom.xml
microservice-performance/src/test/scala/: Recorder.scala  SimplestTest.scala
performance/: wrk_params.lua
performance/gatling/: pom.xml
performance/gatling/src/test/scala/: SimplestTest.scala
responder_app/: Makefile  app.py  last_result  pyproject.toml
rust/: Cargo.toml  Dockerfile  Makefile
rust/src/: main.rs
spring_boot_app/: Vagrantfile  pom.xml
spring_boot_app/src/main/resources/: application.properties  logback.xml
tornado_app/: tox.ini
tornado_app/tornado_app/: app.py
(+4 files in other folders)
